# mediawiki-monitor

./: .dockerignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  run.bat  run.sh  rundev.bat  rundev.sh
src/mediawiki_monitor/: __main__.py  config.py
src/mediawiki_monitor/routes/: __init__.py  wikistat.py
src/mediawiki_monitor/service/: __init__.py  mediawiki_api_service.py
src/mediawiki_monitor/static/: diff.css  error.css  styles.css  wikifamily.css  wikistat.css
src/mediawiki_monitor/templates/: base.html  base_footer.html  base_header.html  macros.html
src/mediawiki_monitor/templates/wikistat/: diff.html  error.html  wikifamily.html  wikistat.html
src/mediawiki_monitor/templates/wikistat/user/: contribs.html  user.html
src/mediawiki_monitor/templates/wikistat/wikifamily/: active_users.html  administators.html  recent_changes.html  wikifamily.html
src/mediawiki_monitor/templates/wikistat/wikistat/: wikistat.html  wikistat_links.html
