[project]
name = "mediawiki-monitor"
version = "0.1.0"
description = "Statistics monitoring for mediawiki wikis."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
]

[project.scripts]
mediamonitor = "mediawiki_monitor.__main__:run_app"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
dummy-variable-rgx = "^_+$"
select = ["ALL"]

ignore = [
    "D203",
    "D213",
    "COM812",
    "ISC001",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",
    "D",
    "ANN",
    "PLR2004",
    "ARG001",
    "PLR0913",
]
"**/pwb_config/families/**" = [
    "ALL",
]
"**/pwb_config/user-config.py" = [
    "ALL",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.basedpyright]
include = ["src/mediawiki_monitor/"]
exclude = [
    "**/pwb_config/families/**",
    "**/pwb_config/user-config.py",
]
typeCheckingMode = "all"
pythonVersion = "3.14"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingTypeArgument = false
reportUnusedParameter = false
reportGeneralTypeIssues = false
reportAny = false
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/mediawiki_monitor/"] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
